Scrollbars and dropdown (news) fix

--- a/src/index.css
+++ b/src/index.css
@@ -95,3 +95,15 @@ body {
   opacity: 0.5;
 }
 /* tablet view */
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #004f9b;
+}
